ingress/kubeapps/wordpress/wordpress-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: wordpress
  namespace: default
spec:
#   tls:
#   - hosts:
#     - lope.test
#     secretName: lope-tls-secret
  rules:
  - host: wordpress.lope.test
    http:
      paths:
      - path: /
        backend:
          serviceName: cooing-meal-wordpress
          servicePort: 80
